# atu

./: .env.example  .gitignore  INSTALL.md  README.md  atu.md  install.sh  pyproject.toml  run.sh  traccar.md
src/: atuc.py  config.py  logger.py  main.py  payload.py  retransmit.py  traccar.py
systemd/: atu-gps.service
tests/: README.md  test_atuc.py  test_config.py  test_payload.py  test_retransmit.py  test_traccar.py
tests/fixtures/: invalid_payload.json  valid_payload.json
