[project]
name = "atu"
version = "0.1.0"
description = "ATU GPS WebSocket integration service — Traccar to SICM bridge"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "hypothesis>=6.92",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
